Add more unit tests.